# benyuan-unfolding-theory

./: .gitignore  LICENSE  README.md  pyproject.toml
admission/: index.html  方案设计.md
cardiac-discharge/: index.html  方案设计.md
core/: bootstrap.md  concepts.md  expansion_cycle.md  goals.md  identity.md  limitations.md  soul.md  theory.md  unknowns.md
progress-note/: index.html  方案设计.md
risk-scores/: index.html
runtime/: FEEDBACK_TEMPLATE.md  HOPE_STATE.md  PORF_OBSERVATION5_EXAMPLES.md  a4_a6_governance_article_outline_2026-06-10.md  agent_boundaries.md  ai_subject_evaluation_layer_draft.md  beauty_landauer_approved_candidates.md  candidates.db  collaborative_rest_protocol.md  concepts_v2_draft.md  conflicts.md  constraint_priority_creativity_mapping.md  constraint_priority_model.md  current_state.md  failure_conditions_draft.md  fava_governance_charter_from_benyuan_2026-06-12.md  fava_structural_optimization_plan.md  hermes_continuity_integration_plan.md  hermes_task_expansion_protocol.md  index.md  index_hermes.md  index_history.md  index_science.md  index_theory.md  language_features_constraint_analysis.md  memory.md  memory_metabolism_activation_2026-05-24.md  memory_metabolism_protocol.md  origin_naming_draft.md  practice_methodology.md  practice_observation_framework.md  recent_conversation.md  reflection.md  science_interfaces_draft.md  state.md  subject_bridge_conditions_draft.md  task_theory_application_framework.md  theory_to_code_mapping.md  theory_v2_draft.md  trust_deception_protocol.md  (+2 more)
scripts/: README.md  analogy_finder.py  candidate_store.py  (+13 more)
(+18 files in other folders)
